# AI_DSCUBED_Week2_Project2

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
brain/: README.md
brain/bronze/pipelines/: discord_chat.py
brain/postgres/AndyS/: manage_tables.py  view_best_uni.py  (+2 more)
custom_tools/fact_checking/: __init__.py  functions.py
custom_tools/general/: functions.py
custom_tools/gmail/: gmail_client.py  requirements.txt  test_reply.py  test_send.py
custom_tools/notion/: data_to_csv_temp.py  fetch_active_user_tasks.py  notion_functions.py  user_list.csv
custom_types/: discord.py  notion.py
darcy/: fact_processing_engine.py  notion_crud_engine_v1.py  notion_crud_engine_v2.py  notion_crud_engine_v3.py
database/: README.md
programs/discord/: bot.py  config.py  engine_manager.py  message_processor.py
programs/meeting-recorder-bot/: recorderbot.py
programs/scrum-checkup/: bot.py  components.py  config.py  engine_manager.py  main.py  message_processor.py  process.py  program_types.py  scrum_checkup_engine.py  scrum_checkup_post_process.py  scrum_checkup_pre_process.py  scrum_checkup_types.py  scrum_engine.py  scrum_process.py  scrum_update_engine.py  session_manager.py  types.py
programs/scrum-master/: bot.py  components.py  scrum_engine.py  session_manager.py
prompts/: scrum_process.md
tools/database/: database.py
tools/fact_checking/: functions.py
tools/general/: functions.py
tools/gmail/: README.md  test_read.py
tools/mcp-servers/: README.md
tools/notion/: data.py  fetch_active_user_tasks.py  notion.py  notion_functions.py
(+22 files in other folders)
